--- a/src/less/index.less
+++ b/src/less/index.less
@@ -259,6 +259,7 @@
 .translator {
     position: relative;
     display: block;
+    overflow: hidden;
     .translator-intro {
         display: block;
         position: absolute;
