--- a/src/less/override.less
+++ b/src/less/override.less
@@ -19,6 +19,9 @@
 .row.grid-gutter >* {
 	margin-bottom: 5px;
 }
+.modal .owl-theme .owl-controls {
+	margin-top: 0px;
+}
 // .sidebar-left-in .app, .sidebar-right-in .app  {
 //    transform: translate3d(0,0,0);
 //    background: #ccc;
