--- a/src/templates/applicants.html
+++ b/src/templates/applicants.html
@@ -58,7 +58,7 @@
                         <div class="media">
                             <div class="media-left">
                                 <div class="circle icon-70">
-                                    <img class="media-object block full-width" ng-src="{{staticImageUrl + payment.avatar || '../images/avatar.png'}}" err-src="../images/avatar.png" alt="">
+                                    <img class="media-object block full-width" ng-src="{{staticImageUrl + payment.avatar || '../images/avatar.png'}}" err-src="../images/avatar_1.png" alt="">
                                 </div>
                             </div>
                             <div class="media-body">
