--- a/src/templates/apply_flow.html
+++ b/src/templates/apply_flow.html
@@ -272,7 +272,7 @@
                     <div class="pull-left section section-condensed bg-transparent" ui-turn-off="district_panel">
                         <i class="fa fa-chevron-left" style="position:relative;top:3px"></i>
                     </div>
-                    <span class="pull-right" style="position:relative;top:3px" ui-turn-off="district_panel">完成</span>
+                    <span class="pull-right" style="position:relative;top:3px" ui-turn-off="district_panel">{{"Save" | translate}}</span>
                     <h4 class="modal-title text-center">选择地区</h4>
                 </div>
                 <div class="modal-body" style="padding:0">
