--- a/src/templates/recommands.html
+++ b/src/templates/recommands.html
@@ -12,21 +12,21 @@
                     {{recommand.nickname}} <i class="kk kk-icon" ng-class="{'kk-male':recommand.gender=='1','kk-female':recommand.gender !='1'}"></i>
                 </div>
                 <div class="recommand-body">
-                    <div>语种：{{recommand.return_language}}</div>
-                    <p>所在地：{{recommand.address}}</p>
-                    <p>个人简介：{{recommand.introduction}}</p>
+                    <div>{{"Language" | translate}}：{{recommand.return_language}}</div>
+                    <p>{{"Place" | translate}}：{{recommand.address}}</p>
+                    <p>{{"Profile" | translate}}：{{recommand.introduction}}</p>
                     <div class="clearfix">
                         <div class="pull-left">
                             <a ng-click="like(recommand)" class="btn btn-default" ng-if="recommand.is_collect == '0'">
-                                <i class="kk kk-like"></i> 收藏此人
+                                <i class="kk kk-like"></i> {{"Follow" | translate}}
                             </a>
                             <a ng-click="unlike(recommand)" class="btn btn-default" ng-if="recommand.is_collect == '1'">
-                                <i class="kk kk-like active"></i> 取消收藏
+                                <i class="kk kk-like active"></i> {{"Followed" | translate}}
                             </a>
                         </div>
                         <div class="pull-right">
                             <a ng-href="#/apply_flow" class="btn btn-default">
-                                <i class="kk kk-accept" ng-class="{'active':recommand.status == '1'}"></i> 提出申请
+                                <i class="kk kk-accept" ng-class="{'active':recommand.status == '1'}"></i> {{"Apply" | translate}}
                             </a>
                         </div>
                     </div>
