--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -19,7 +19,7 @@
         <!-- normal content -->
         <a ng-href="#/tasks/{{task.task_id}}" class="task-section" ng-repeat="task in tasks">
             <div class="section text-ellipsis">
-                <img ng-src="{{staticImageUrl+task.avatar || '../images/avatar.png'}}" err-src="../images/avatar.png" alt="" class="circle icon"> {{task.title}}
+                <img ng-src="{{staticImageUrl+task.avatar || '../images/avatar.png'}}" err-src="../images/avatar_1.png" alt="" class="circle icon"> {{task.title}}
             </div>
             <div class="section bg-gray-lighter">
                 <div class="row text-center">
