--- a/src/templates/task.html
+++ b/src/templates/task.html
@@ -12,7 +12,7 @@
 			<div class="section" style="padding-bottom:0">
 				<div class="semi-auto semi-left-80" style="min-height:80px">
 					<div class="semi-fixed-left text-center">
-						<img ng-src="{{staticImageUrl+ task.avatar || '../images/avatar.png'}}" err-src="../images/avatar.png" class="circle icon-70" alt=""> 
+						<img ng-src="{{staticImageUrl+ task.avatar || '../images/avatar.png'}}" err-src="../images/avatar_1.png" class="circle icon-70" alt=""> 
 					</div>
 					<div style="padding-bottom:8px;">
 						{{task.title}}
