--- a/src/templates/tasks.html
+++ b/src/templates/tasks.html
@@ -24,7 +24,7 @@
             <div class="section">
                 <div class="semi-auto semi-right-80">
                     <div class="text-ellipsis">
-                        <img ng-src="{{staticImageUrl+task.avatar || '../images/avatar.png'}}" err-src="../images/avatar.png" class="circle icon" alt="">
+                        <img ng-src="{{staticImageUrl+task.avatar || '../images/avatar.png'}}" err-src="../images/avatar_1.png" class="circle icon" alt="">
                         {{task.title}}
                     </div>
                     <div class="semi-fixed-right semi-wide-80 text-right" ng-if="task.task_status == 0">
