--- a/src/templates/translators.html
+++ b/src/templates/translators.html
@@ -1,7 +1,7 @@
 <!-- by dribehance <dribehance.kksdapp.com> -->
 <div ui-content-for="title">
     <span class="search-input">
-        <input type="text" class="form-control full-width" ng-focus="show_search_panel()" placeholder="请输入关键字">
+        <input type="text" class="form-control full-width" ng-focus="show_search_panel()" placeholder="{{'Enter Search Keywords, Language/Place/Price/Type' | translate}}">
     </span>
 </div>
 <div ui-content-for="navbarAction">
