--- a/src/templates/me_info.html
+++ b/src/templates/me_info.html
@@ -92,7 +92,7 @@
                     <div class="pull-left section section-condensed bg-transparent" ui-turn-off="district_panel">
                         <i class="fa fa-chevron-left" style="position:relative;top:3px"></i>
                     </div>
-                    <span class="pull-right" style="position:relative;top:3px" ng-click="choosen_city()">完成</span>
+                    <span class="pull-right" style="position:relative;top:3px" ng-click="choosen_city()">{{"Save" | translate}}</span>
                     <h4 class="modal-title text-center">选择地区</h4>
                 </div>
                 <div class="modal-body" style="padding:0">
