--- a/src/templates/report.html
+++ b/src/templates/report.html
@@ -1,7 +1,7 @@
 <!-- by dribehance <dribehance.kksdapp.com> -->
-<div ui-content-for="title">举报或投诉</div>
+<div ui-content-for="title">{{"Report or Complain" | translate}}</div>
 <div ui-content-for="navbarAction">
-	<span class="btn text-white">完成</span>
+	<span class="btn text-white">{{"Save" | translate}}</span>
 </div>
 <div ui-content-for="backAction">
     <span class="btn" ng-click="back()"><i class="fa fa-chevron-left"></i></span>
@@ -10,7 +10,7 @@
     <div class="scrollable-content">
         <div class="list-group">
             <div class="section large bg-transparent">
-                请选择投诉原因
+                {{"Reasons of Complaint" | translate}}
             </div>
             <div class="list-group-item">
                 <div class="pull-left">
@@ -37,15 +37,15 @@
                 <span class="list-group-item-text">其他原因</span>
             </div>
             <div class="section large bg-transparent">
-                请补充证据
+                {{"Evidence" | translate}}
             </div>
             <div class="list-group-item">
-                <span class="list-group-item-text">详细说明</span>
+                <span class="list-group-item-text">{{"Detail Description" | translate}}</span>
                 <i class="text-gray-light fa fa-chevron-right pull-right"></i>
                 <span class="pull-right">请填写</span>
             </div>
             <div class="list-group-item">
-                <span class="list-group-item-text">详细说明</span>
+                <span class="list-group-item-text">{{"Upload Photos" | translate}}</span>
                 <i class="text-gray-light fa fa-chevron-right pull-right"></i>
             </div>
         </div>
