--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -80,7 +80,7 @@
             <div class="navbar navbar-app">
                 <div class="navbar-brand navbar-brand-center">
                     <span class="search-input">
-                        <input type="text" class="form-control full-width" ng-model="input.search" placeholder="请输入关键字">
+                        <input type="text" class="form-control full-width" ng-model="input.search" placeholder="{{'Enter Search Keywords, Language/Place/Price/Type' | translate}}">
                     </span>
                 </div>
                 <div class="btn-group pull-left">
