--- a/src/templates/apply_flow.html
+++ b/src/templates/apply_flow.html
@@ -21,7 +21,7 @@
                     </select>
                 </div>
                 <div class="text-right section large bg-transparent" style="margin-top:150px">
-                    <button type="button" class="btn btn-success" ui-set="{step:2}">下一步</button>
+                    <button type="button" class="btn btn-success" ui-set="{step:2}">{{"Next" | translate}}</button>
                 </div>
             </div>
             <!-- step 2 -->
@@ -75,7 +75,7 @@
                     <div class="semi-auto semi-icon-bar">
                         <div class="semi-fixed-left semi-wide-40">
                             <div class="section section-wide">
-                                标题<span class="text-danger">*</span>
+                                {{"Title" | translate}}<span class="text-danger">*</span>
                             </div>
                         </div>
                         <div>
@@ -91,7 +91,7 @@
                     <div class="semi-auto semi-left-40">
                         <div class="semi-fixed-left semi-wide-40">
                             <div class="section section-wide">
-                                类型<span class="text-danger">*</span>
+                                {{"Type" | translate}}<span class="text-danger">*</span>
                             </div>
                         </div>
                         <div class="btn-group justified">
@@ -108,7 +108,7 @@
                     <div class="semi-auto semi-left-40">
                         <div class="semi-fixed-left semi-wide-40">
                             <div class="section section-wide">
-                                价格<span class="text-danger">*</span>
+                                {{"Price" | translate}}<span class="text-danger">*</span>
                             </div>
                         </div>
                         <div class="semi-auto semi-icon-bar">
@@ -117,7 +117,7 @@
                             </span>
                             <input type="number" class="form-control rectangle youyi-flat-input text-right" name="price" ng-model="input.price" placeholder="请填写" required>
                             <span class="semi-fixed-right semi-wide-40 text-center">
-                                <span class="btn">/天</span>
+                                <span class="btn">/{{"Day" | translate}}</span>
                             </span>
                         </div>
                     </div>
@@ -127,7 +127,7 @@
                     <div class="semi-auto semi-icon-bar">
                         <div class="semi-fixed-left semi-wide-40">
                             <div class="section section-wide">
-                                地点<span class="text-danger">*</span>
+                                {{"Place" | translate}}<span class="text-danger">*</span>
                             </div>
                         </div>
                         <div class="section large text-right">
@@ -144,7 +144,7 @@
                     <div class="semi-auto semi-icon-bar">
                         <div class="semi-fixed-left">
                             <div class="section section-wide">
-                                任务详情<span class="text-danger">*</span>
+                                {{"Task Details" | translate}}<span class="text-danger">*</span>
                             </div>
                         </div>
                         <div>
@@ -156,8 +156,8 @@
                     </div>
                 </div>
                 <div class="section large bg-transparent">
-                    <button type="button" class="btn btn-default pull-left" ui-set="{step:1}">上一步</button>
-                    <button type="button" class="btn btn-success pull-right" ng-disabled="releaseForm.$invalid || choosen.city.name ==''" ng-click="next({step:'3'})">下一步</button>
+                    <button type="button" class="btn btn-default pull-left" ui-set="{step:1}">{{"Previous" | translate}}</button>
+                    <button type="button" class="btn btn-success pull-right" ng-disabled="releaseForm.$invalid || choosen.city.name ==''" ng-click="next({step:'3'})">{{"Next" | translate}}</button>
                 </div>
             </div>
             <!-- step 3 -->
@@ -180,7 +180,7 @@
                     <div class="section large" style="padding-bottom:0">
                         <div class="semi-auto semi-left-80">
                             <div class="semi-fixed-left text-center">
-                                语言：
+                                {{"Language" | translate}}：
                             </div>
                             <div style="padding-bottom:8px;">
                                 {{choosen_language.from.name}}/{{choosen_language.to.name}}
@@ -203,7 +203,7 @@
                     <div class="section large" style="padding-bottom:0">
                         <div class="semi-auto semi-left-80">
                             <div class="semi-fixed-left text-center">
-                                类型：
+                                {{"Type" | translate}}：
                             </div>
                             <div style="padding-bottom:8px;">
                                 {{input.category.name}}
@@ -214,10 +214,10 @@
                     <div class="section large" style="padding-bottom:0">
                         <div class="semi-auto semi-left-80">
                             <div class="semi-fixed-left text-center">
-                                价格：
+                                {{"Price" | translate}}：
                             </div>
                             <div style="padding-bottom:8px;">
-                                {{input.price}}/天
+                                {{input.price}}/{{"Day" | translate}}
                             </div>
                             <div class="kk-line kk-horizon bg-gray-lighter"></div>
                         </div>
@@ -236,7 +236,7 @@
                     <div class="section large" style="padding-bottom:0">
                         <div class="semi-auto semi-left-80">
                             <div class="semi-fixed-left text-center">
-                                地点：
+                                {{"Place" | translate}}：
                             </div>
                             <div style="padding-bottom:8px;">
                                 {{choosen.city.country +","+choosen.city.name}}
@@ -247,7 +247,7 @@
                     <div class="section large" style="padding-bottom:0">
                         <div class="semi-auto semi-left-80">
                             <div class="semi-fixed-left text-center">
-                                任务详情：
+                                {{"Task Details" | translate}}：
                             </div>
                             <div style="padding-bottom:8px;">
                                 {{input.content}}
@@ -256,8 +256,8 @@
                     </div>
                 </div>
                 <div class="section large bg-transparent">
-                    <button type="button" class="btn btn-default pull-left" ui-set="{step:2}">上一步</button>
-                    <button type="submit" class="btn btn-warning pull-right">确认提交</button>
+                    <button type="button" class="btn btn-default pull-left" ui-set="{step:2}">{{"Previous" | translate}}</button>
+                    <button type="submit" class="btn btn-warning pull-right">{{"Confirm" | translate}}</button>
                 </div>
             </div>
         </form>
