--- a/src/templates/release_task.html
+++ b/src/templates/release_task.html
@@ -220,7 +220,7 @@
                     <div class="section large" style="padding-bottom:0">
                         <div class="semi-auto semi-left-80">
                             <div class="semi-fixed-left text-center">
-                                {{"Type" | translate}}：
+                                {{"Price" | translate}}：
                             </div>
                             <div style="padding-bottom:8px;">
                                 {{input.price}}/{{"Day" | translate}}
