change to five tab

--- a/src/less/icon.less
+++ b/src/less/icon.less
@@ -41,6 +41,14 @@
         background-size: 100%;
         background-image: url("../images/tab_4.png")
     }
+    &.kk-tab-5 {
+        background-size: 100%;
+        background-image: url("../images/tab_5.png")
+    }
+    &.kk-tab-6 {
+        background-size: 90%;
+        background-image: url("../images/tab_6.png")
+    }
     &.kk-sidebar-1 {
         background-size: 100%;
         background-image: url("../images/sidebar_1.png")
@@ -234,6 +242,9 @@
     }
     .kk.kk-tab-4 {
         background-image: url("../images/tab_4_active.png")
+    }
+    .kk.kk-tab-6 {
+        background-image: url("../images/tab_6_active.png")
     }
 }
 
