--- a/src/templates/recommands.html
+++ b/src/templates/recommands.html
@@ -25,7 +25,8 @@
                             </a>
                         </div>
                         <div class="pull-right">
-                            <a ng-href="#/apply_flow" class="btn btn-default">
+                            <!-- ng-href="#/apply_flow" -->
+                            <a ng-click="apply(recommand.user_id)" class="btn btn-default">
                                 <i class="kk kk-accept" ng-class="{'active':recommand.status == '1'}"></i> {{"Apply" | translate}}
                             </a>
                         </div>
